Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4413

Test failure on test suite conf-sanity, subtest test_56

XMLWordPrintable

    • 3
    • 12112

      This issue was created by maloo for Nathaniel Clark <nathaniel.l.clark@intel.com>

      This issue relates to the following test suite run:
      http://maloo.whamcloud.com/test_sets/d5f1f7c2-6a01-11e3-9248-52540035b04c
      https://maloo.whamcloud.com/test_sets/e4cbde82-6a35-11e3-8e21-52540035b04c

      The sub-test test_56 failed with the following error:

      test failed to respond and timed out

      Info required for matching: conf-sanity 56

            di.wang Di Wang (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: