LU-4413 osp: move seq allocation out of osp_import_event

Because seq allocation(osp_init_pre_fid) might be stuck
during RPC, move it out of osp_import_event, which is
inside ptlrpcd_rcv. Otherwise, some other import RPCs(like
connect req)might be blocked in ptlrpcd_rcv.

To fix random failures in conf-sanity caused by LU-4413,
copy the patch: Ib4014f8b0088ea3613fa4d53d3e274f5bdfe70c7
to avoid update/retest the original patch. This patch will
not be landed, but only for making subsequent LFSCK patches
to pass Maloo tests.

Test-Parameters: fortestonly
Signed-off-by: wang di <di.wang@intel.com>
Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: Ic52afd1286dd2a09d6a0cf830eb8f541e82426c8