lustre/osp/osp_precreate.c
@@ -812,7 +812,7 @@ out:
 	wake_up(&d->opd_pre_user_waitq);
 }
 
-int osp_init_pre_fid(struct osp_device *osp)
+static int osp_init_pre_fid(struct osp_device *osp)
 {
 	struct lu_env		env;
 	struct osp_thread_info	*osi;
@@ -915,6 +915,16 @@ static int osp_precreate_thread(void *_arg)
 		/* Sigh, fid client is not ready yet */
 		if (d->opd_obd->u.cli.cl_seq->lcs_exp == NULL)
 			continue;
+
+		/* Init fid for osp_precreate if necessary */
+		rc = osp_init_pre_fid(d);
+		if (rc != 0) {
+			class_export_put(d->opd_exp);
+			d->opd_obd->u.cli.cl_seq->lcs_exp = NULL;
+			CERROR("%s: init pre fid error: rc = %d\n",
+			       d->opd_obd->obd_name, rc);
+			continue;
+		}
 
 		osp_statfs_update(d);
 
